discovered css error

--- a/styles.css
+++ b/styles.css
@@ -84,8 +84,8 @@ body {
 }
 #content {
     display: block;
-    margin-left: auto auto;
-	margin-top:5em;
+    margin: auto auto;
+    margin-top:5em;
 }
 header {
 	font-family: Arial;
